--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 PORT=YourPort
 MONGO_URI=your connection string
 JWT_ACCESS_SECRET=your JWT_ACCESS_SECRET key
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASS=adminPassword
