--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
