--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
