--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
