update 3 files and create 2 files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,12 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
