--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
+    "html-react-parser": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
