--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "froala-editor": "^4.2.0",
     "hamburger-react": "^2.5.1",
     "html-react-parser": "^5.1.10",
     "jsonwebtoken": "^9.0.2",
@@ -33,16 +34,16 @@
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "react-froala-wysiwyg": "^4.2.0",
-    "froala-editor": "^4.2.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
