--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-syntax-highlighter": "^15.5.0",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
